--- a/frontPage/select.html
+++ b/frontPage/select.html
@@ -336,88 +336,88 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="c-cell c-table-w-125">disabled</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">disabled</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-200">禁用select元素</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-200">禁用select元素</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-125">Boolean</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">Boolean</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-500">默认为false，入参为true时，禁用select，DOM定位必须为select元素</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{disabled: false}，默认为false，入参为true时，禁用select，DOM定位必须为select元素，详见上文demo。">{disabled: false}，默认为false，入参为true时，禁用select，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="c-cell c-table-w-125">selected</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">selected</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-200">模拟点击选中第N项option</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-200">模拟点击选中第N项option</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-125">Number</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">Number</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-500">默认为-1，第一项为0，依次累加，DOM定位必须为select元素</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{selected: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。">{selected: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="c-cell c-table-w-125">remove</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">remove</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-200">删除select的第N项option</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-200">删除select的第N项option</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-125">Number</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">Number</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-500">默认为-1，第一项为0，依次累加，DOM定位必须为select元素</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{remove: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。">{remove: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="c-cell c-table-w-125">eventFn</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">eventFn</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-200">自定义回调函数</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-200">自定义函数</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-125">Function</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">Function</div>
                     </td>
                     <td>
-                        <div class="c-cell c-table-w-500"></div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{remove: function(){ }}，自定义函数，代码置于函数内，非熟悉js人员，不建议使用。">{remove: function(){ }}，自定义函数，代码置于函数内，非熟悉js人员，不建议使用。</div>
                     </td>
                 </tr>
-                <tr>
-                    <td>
-                        <div class="c-cell c-table-w-125">beforeFn</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-200">前置回调函数</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-125">Function</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-500">待完善</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="c-cell c-table-w-125">afterFn</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-200">后置回调函数</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-125">Function</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-table-w-500">待完善</div>
-                    </td>
-                </tr>
+                <!--<tr>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">beforeFn</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-200">前置回调函数</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">Function</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-500">待完善</div>-->
+                    <!--</td>-->
+                <!--</tr>-->
+                <!--<tr>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">afterFn</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-200">后置回调函数</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">Function</div>-->
+                    <!--</td>-->
+                    <!--<td>-->
+                        <!--<div class="c-cell c-cell-height-auto c-table-w-500">待完善</div>-->
+                    <!--</td>-->
+                <!--</tr>-->
                 </tbody>
             </table>
         </div>
