--- a/frontPage/select.html
+++ b/frontPage/select.html
@@ -229,7 +229,7 @@
                     </select>
                 </div>
                 <div style="display: inline-block;margin-left: 20px">
-                    <button type="button" class="zr-btn zr-btn-primary" id="changeVal">模拟点击选中第N项option</button>
+                    <button type="button" class="zr-btn zr-btn-primary" id="changeVal">选中value值为输入值的option</button>
                 </div>
             </div>
             <div style="margin-top: 20px">
@@ -242,7 +242,7 @@
                     </select>
                 </div>
                 <div style="display: inline-block;margin-left: 20px">
-                    <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的第N项option</button>
+                    <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除value值为输入值的option</button>
                 </div>
             </div>
         </div>
@@ -273,13 +273,13 @@
                 <option value="021">上海</option>
                 <option value="0571">杭州</option>
             </select>
-            <button type="button" class="zr-btn zr-btn-primary" id="changeVal">模拟点击选中第N项option</button>
+            <button type="button" class="zr-btn zr-btn-primary" id="changeVal">选中value值为输入值的option</button>
             <script type="text/javascript">
                 Zr.ready(function () {
                     Zr.use("jquery", function (zr, $) {
                         $("#changeVal").off("click").on("click", function () {
                             document.getElementById("selectDom2").onzrchange({
-                                selected: 1 //选中第二项
+                                selected: '010' //选中北京
                             })
                         });
                     })
@@ -292,13 +292,13 @@
                 <option value="021">上海</option>
                 <option value="0571">杭州</option>
             </select>
-            <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除select的第N项option</button>
+            <button type="button" class="zr-btn zr-btn-primary" id="deleteOpt">删除value值为输入值的option</button>
             <script type="text/javascript">
                 Zr.ready(function () {
                     Zr.use("jquery", function (zr, $) {
                         $("#deleteOpt").off("click").on("click", function () {
                             document.getElementById("selectDom3").onzrchange({
-                                remove: 2
+                                remove: '010' // 删除北京
                             })
                         });
                     })
@@ -318,13 +318,10 @@
                         <div class="c-cell c-table-w-125">属性</div>
                     </th>
                     <th>
-                        <div class="c-cell c-table-w-200">描述</div>
-                    </th>
-                    <th>
                         <div class="c-cell c-table-w-125">类型</div>
                     </th>
                     <th>
-                        <div class="c-cell c-table-w-500">默认值</div>
+                        <div class="c-cell c-table-w-500">描述</div>
                     </th>
                 </tr>
                 </thead>
@@ -339,13 +336,10 @@
                         <div class="c-cell c-cell-height-auto c-table-w-125">disabled</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-200">禁用select元素</div>
-                    </td>
-                    <td>
                         <div class="c-cell c-cell-height-auto c-table-w-125">Boolean</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{disabled: false}，默认为false，入参为true时，禁用select，DOM定位必须为select元素，详见上文demo。">{disabled: false}，默认为false，入参为true时，禁用select，DOM定位必须为select元素，详见上文demo。</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500">禁用select元素,eg:{disabled: false}，默认为false，入参为true时，禁用select，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
@@ -353,13 +347,10 @@
                         <div class="c-cell c-cell-height-auto c-table-w-125">selected</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-200">模拟点击选中第N项option</div>
-                    </td>
-                    <td>
                         <div class="c-cell c-cell-height-auto c-table-w-125">Number</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{selected: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。">{selected: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500">模拟点击选中第N项option，eg：{selected: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
@@ -367,57 +358,34 @@
                         <div class="c-cell c-cell-height-auto c-table-w-125">remove</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-200">删除select的第N项option</div>
-                    </td>
-                    <td>
                         <div class="c-cell c-cell-height-auto c-table-w-125">Number</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{remove: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。">{remove: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500">删除select的第N项option，eg：{remove: -1}，默认为-1，第一项为0，依次累加，DOM定位必须为select元素，详见上文demo。</div>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-125">eventFn</div>
-                    </td>
-                    <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-200">自定义函数</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">beforeFn</div>
                     </td>
                     <td>
                         <div class="c-cell c-cell-height-auto c-table-w-125">Function</div>
                     </td>
                     <td>
-                        <div class="c-cell c-cell-height-auto c-table-w-500" title="{remove: function(){ }}，自定义函数，代码置于函数内，非熟悉js人员，不建议使用。">{remove: function(){ }}，自定义函数，代码置于函数内，非熟悉js人员，不建议使用。</div>
+                        <div class="c-cell c-cell-height-auto c-table-w-500">前置回调函数</div>
                     </td>
                 </tr>
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">beforeFn</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-200">前置回调函数</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">Function</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-500">待完善</div>-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">afterFn</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-200">后置回调函数</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-125">Function</div>-->
-                    <!--</td>-->
-                    <!--<td>-->
-                        <!--<div class="c-cell c-cell-height-auto c-table-w-500">待完善</div>-->
-                    <!--</td>-->
-                <!--</tr>-->
+                <tr>
+                    <td>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">afterFn</div>
+                    </td>
+                    <td>
+                        <div class="c-cell c-cell-height-auto c-table-w-125">Function</div>
+                    </td>
+                    <td>
+                        <div class="c-cell c-cell-height-auto c-table-w-500">后置回调函数</div>
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
@@ -444,17 +412,18 @@
             $("#changeDis").off("click").on("click", function () {
                 document.getElementById("selectDom1").onzrchange({
                     disabled:true
-                })
+                });
             });
             $("#changeVal").off("click").on("click", function () {
                 document.getElementById("selectDom2").onzrchange({
-                    selected: 1 //选中第二项
-                })
+                    selected: '010'
+                });
+                console.log($('#changeVal').val());
             });
             $("#deleteOpt").off("click").on("click", function () {
                 document.getElementById("selectDom3").onzrchange({
-                    remove: 2
-                })
+                    remove: '010'
+                });
             })
         })
     })
